--- a/index.html
+++ b/index.html
@@ -1,6 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <h1>Mordecai</h1>
-  </body>
+
+<head>
+  <link rel="stylesheet" href="style/mordecai.css" />
+  <script src="lib/jquery.js"></script>
+  <script src="lib/mordecai.js"></script>
+</head>
+
+<body>
+  <h1>Mordecai</h1>
+  <div class="tabletop">
+    <div class="board">
+      <div class="row 12">
+        <div class="code-peg-hole h-1">
+          <div class="code-peg"></div>
+        </div>
+        <div class="code-peg-hole h-2">
+          <div class="code-peg"></div>
+        </div>
+        <div class="code-peg-hole h-3">
+          <div class="code-peg"></div>
+        </div>
+        <div class="code-peg-hole h-4">
+          <div class="code-peg"></div>
+        </div>
+      </div>
+    </div>
+    <div class="code-pegs">
+      <div class="code-peg-hole">
+        <div class="code-peg p-0"></div>
+      </div>
+      <div class="code-peg-hole">
+        <div class="code-peg p-1"></div>
+      </div>
+      <div class="code-peg-hole">
+        <div class="code-peg p-2"></div>
+      </div>
+      <div class="code-peg-hole">
+        <div class="code-peg p-3"></div>
+      </div>
+      <div class="code-peg-hole">
+        <div class="code-peg p-4"></div>
+      </div>
+      <div class="code-peg-hole">
+        <div class="code-peg p-5"></div>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
