--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <link rel="stylesheet" href="style/mordecai.css" />
@@ -9,23 +9,10 @@
 
 <body>
   <h1>Mordecai</h1>
+  <button type="button" class="start-button">Start a new random game</button>
   <div class="tabletop">
-    <div class="board">
-      <div class="row 12">
-        <div class="code-peg-hole h-1">
-          <div class="code-peg"></div>
-        </div>
-        <div class="code-peg-hole h-2">
-          <div class="code-peg"></div>
-        </div>
-        <div class="code-peg-hole h-3">
-          <div class="code-peg"></div>
-        </div>
-        <div class="code-peg-hole h-4">
-          <div class="code-peg"></div>
-        </div>
-      </div>
-    </div>
+    <div class="board"></div>
+    <div class="submit-pane"></div>
     <div class="code-pegs">
       <div class="code-peg-hole">
         <div class="code-peg p-0"></div>
@@ -48,5 +35,4 @@
     </div>
   </div>
 </body>
-
 </html>
