Basic gameplay working

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="tabletop flex">
     <div class="board flex--col">
       <div class="guess-current flex"></div>
-      <div class="guess-history flex"></div>
+      <div class="guess-history flex--col"></div>
     </div>
     <div class="code-pegs flex--col">
       <div class="code-peg-hole">
